--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm run build"
+  command = ""
   publish = "dist"
 
 [context.deploy-preview]
-  command = "npm run build-preview"
+  command = ""
